Update ci.yml branch names

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: GitHub Actions
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main","master"]
   pull_request:
-    branches: ["main"]
+    branches: ["main","master"]
 
 jobs:
   link_check:
